added an image to intro

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
     <!----Quiz---->
     <section class="quiz-app">
+        <h1>Global News Quiz</h1>
+
         <div class="intro">
-            <h1>Global News Quiz</h1>
-            <p>Test your knowledge of the news around the world.</p>
+            <img src="assets/image/globe.png">
+            <h2>Test your knowledge of the news around the world.</h2>
             <button id="start">Start Quiz</button>
-        </div>
+        </div> 
 
         <div class="quiz-container">
             <div id="quiz"></div>
