removed the start button and the quiz-container div

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
         <h1>Global News Quiz</h1>
 
         <div class="intro">
-            <img src="assets/image/globe.png">
+            <img src="assets/img/globe.png" alt="globe">
             <h2>Test your knowledge of the news around the world.</h2>
-            <button id="start">Start Quiz</button>
         </div> 
 
-        <div class="quiz-container">
-            <div id="quiz"></div>
-        </div>
+    
+        <div id="quiz"></div>
+        
 
         <button id="previous">Previous</button>
         <button id="next">Next</button>
