added actve-slide class to quiz div

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div> 
 
     
-        <div id="quiz"></div>
+        <div id="quiz" class="active-slide"></div>
         
 
         <button id="previous">Previous</button>
