removed img tag from intro and active class from quiz div

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
         <h1>Global News Quiz</h1>
 
         <div class="intro">
-            <img src="assets/img/globe.png" alt="globe">
             <h2>Test your knowledge of the news around the world.</h2>
         </div> 
 
-    
-        <div id="quiz" class="active-slide"></div>
-        
+        <div id="quiz-container">
+            <div id="quiz"></div>
+        </div>
 
         <button id="previous">Previous</button>
         <button id="next">Next</button>
