--- a/index.html
+++ b/index.html
@@ -16,15 +16,24 @@
             <h2>Test your knowledge of the news around the world.</h2>
         </div> 
 
-        <div id="quiz-container">
-            <div id="quiz"></div>
+        <div id="quiz-container">  
+            <div id="quiz"></div>    
         </div>
+        <h3 id="progressText">Question</h3>
+        <div id="progressBar">
+                <div id="progressBarFull">Progress</div>
+            </div> 
 
         <button id="previous">Previous</button>
         <button id="next">Next</button>
         <button id="submit">Submit Quiz</button>
 
         <div id="results"></div>
+
+        <!--<a href="index.html">Restart Quiz</a>-->
+    
+        <!--<button id="restart">Restart Quiz</button>-->
+        
 
 
     </section>
